src/solver/glucose/bindings.rs

/* automatically generated by rust-bindgen 0.59.2 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct glucose_solver_t {
    _unused: [u8; 0],
}
pub type glucose_solver = glucose_solver_t;
pub type glucose_bool = ::std::os::raw::c_int;
pub type glucose_lbool = ::std::os::raw::c_int;
pub type glucose_var = ::std::os::raw::c_int;
pub type glucose_lit = ::std::os::raw::c_int;
pub const glucose_ltrue: glucose_lbool = 1;
pub const glucose_lfalse: glucose_lbool = 0;
pub const glucose_lundef: glucose_lbool = -1;
extern "C" {
    pub fn glucose_new(preprocessing: glucose_bool, parallel: glucose_bool) -> *mut glucose_solver;
}
extern "C" {
    pub fn glucose_delete(s: *mut glucose_solver);
}
extern "C" {
    pub fn glucose_add_clause_begin(s: *mut glucose_solver);
}
extern "C" {
    pub fn glucose_add_clause_add_lit(s: *mut glucose_solver, p: glucose_lit);
}
extern "C" {
    pub fn glucose_add_clause_commit(s: *mut glucose_solver) -> glucose_bool;
}
extern "C" {
    pub fn glucose_new_lit(s: *mut glucose_solver) -> glucose_lit;
}
extern "C" {
    pub fn glucose_make_lit(x: glucose_var) -> glucose_lit;
}
extern "C" {
    pub fn glucose_negate_lit(p: glucose_lit) -> glucose_lit;
}
extern "C" {
    pub fn glucose_lit_to_var(p: glucose_lit) -> glucose_var;
}
extern "C" {
    pub fn glucose_solve(s: *mut glucose_solver) -> glucose_bool;
}
extern "C" {
    pub fn glucose_model_value_var(s: *mut glucose_solver, x: glucose_var) -> glucose_lbool;
}
